--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -8,7 +8,6 @@
   height: 100%;
   width: 100%;
   z-index: 10;
-  padding: 20px 15px 20px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   display: -ms-grid;
@@ -63,11 +62,11 @@
 }
 
 .reg-menu__short {
-  background-image: url('../images/menu-reg-bg15.svg');
+  background-image: url('../images/menu-reg-bg16.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 10px 10px 8px;
+  padding: 10px 10px 15px;
   display: -ms-grid;
   display: grid;
   -webkit-box-align: center;
@@ -75,10 +74,8 @@
   align-items: center;
   justify-items: center;
   grid-template-columns: repeat(2, 1fr) 1fr repeat(2, 1fr);
-  border-radius: 10px;
   pointer-events: all;
   position: relative;
-  border-bottom: 2px solid var(--color-secondary);
 }
 
 .reg-menu__short::before {
@@ -113,7 +110,7 @@
   border: none;
   background: transparent;
   cursor: pointer;
-  color: var(--color-dark);
+  color: #fff;
   text-align: center;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -153,7 +150,7 @@
   object-fit: contain;
   -o-object-position: center;
   object-position: center;
-  /* filter: brightness(0) invert(1); */
+  filter: brightness(0) invert(1);
 }
 
 .reg-menu__accent-link {
@@ -186,7 +183,7 @@
   border-radius: 10px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  margin-bottom: 20px;
+  margin: 20px 15px;
   padding: 15px 25px;
   opacity: 0;
   visibility: hidden;
