--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -113,7 +113,7 @@
   color: var(--color-dark);
   text-align: center;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  padding: 5px;
+  padding: 5px 2px;
   border-radius: 10px;
 }
 
