--- a/style/typography.v2.css
+++ b/style/typography.v2.css
@@ -94,9 +94,13 @@
     font-size: 12px;
   }
   .menu {
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 120%;
+    font-size: 11px;
+    font-weight: 400;
+  }
+}
+
+@media screen and (max-width: 365px) {
+  .menu {
+    font-size: 9px;
   }
 }
