--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -224,6 +224,7 @@
   -ms-grid-columns: 1fr min-content;
   grid-template-columns: 1fr -webkit-min-content;
   grid-template-columns: 1fr min-content;
+  gap: 20px;
   background-color: #fff;
   border-radius: 10px;
   -webkit-box-sizing: border-box;
@@ -239,6 +240,9 @@
   -webkit-box-shadow: -2px 4px 20px rgba(106, 110, 125, 0.2);
   box-shadow: -2px 4px 20px rgba(106, 110, 125, 0.2);
   flex-grow: 1;
+  max-height: 100%;
+  /* height: auto; */
+  overflow: hidden;
 }
 
 .reg-menu__long_opened {
@@ -247,13 +251,19 @@
   pointer-events: all;
 }
 
-.reg-menu__long-list {
+.reg-menu__long-inner-container {
+  max-height: 100%;
+  height: 100%;
+  overflow: hidden;
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: list;
   -ms-grid-row-align: start;
   align-self: start;
+}
+
+.reg-menu__long-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -262,9 +272,9 @@
   -ms-flex-direction: column;
   flex-direction: column;
   gap: 15px;
-  margin: 40px 0;
+  max-height: 100%;
+  height: 100%;
   overflow: auto;
-  max-height: 420px;
 }
 
 .reg-menu__long-item {
@@ -291,8 +301,12 @@
   border: 1px solid var(--color-primary);
   -ms-grid-column-align: start;
   justify-self: start;
-  padding: 5px;
+  padding: 5px 8px;
   border-radius: 8px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 80%;
+  /* max-width: 50px; */
 }
 
 .reg-menu__long-settings {
@@ -343,4 +357,5 @@
   color: var(--color-dark);
   cursor: pointer;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  align-self: end;
 }
