--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -224,12 +224,12 @@
   -ms-grid-columns: 1fr min-content;
   grid-template-columns: 1fr -webkit-min-content;
   grid-template-columns: 1fr min-content;
-  gap: 20px;
+  gap: 40px;
   background-color: #fff;
   border-radius: 10px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 20px 15px;
+  margin: 20px 15px 40px;
   padding: 15px 25px;
   opacity: 0;
   visibility: hidden;
@@ -241,7 +241,6 @@
   box-shadow: -2px 4px 20px rgba(106, 110, 125, 0.2);
   flex-grow: 1;
   max-height: 100%;
-  /* height: auto; */
   overflow: hidden;
 }
 
