--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -30,6 +30,7 @@
   pointer-events: none;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .reg-menu::before {
@@ -153,8 +154,6 @@
   border-radius: 50%;
   background-color: var(--color-secondary);
   position: relative;
-  z-index: 1;
-  /* background-image: url('../images/icons/plus.png'); */
   background-position: center;
   background-repeat: no-repeat;
   animation: rotate 20s infinite;
@@ -172,6 +171,7 @@
   height: 50%;
   background-color: #fff;
   border-radius: 5px;
+  z-index: -1;
 }
 .reg-menu__short-item-accent::after {
   -webkit-transform: translate(-50%, -50%) rotate(90deg);
@@ -194,13 +194,11 @@
   fill: var(--color-secondary);
 }
 
-/* .reg-menu__short-item_active .reg-menu__short-item-img {
-  filter: brightness(0) invert(1);
-} */
-
 .reg-menu__accent-link {
   width: 100%;
   height: 100%;
+  position: absolute;
+  inset: 0;
 }
 
 .reg-menu__button {
@@ -239,9 +237,9 @@
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
   -webkit-box-shadow: -2px 4px 20px rgba(106, 110, 125, 0.2);
   box-shadow: -2px 4px 20px rgba(106, 110, 125, 0.2);
-  flex-grow: 1;
   max-height: 100%;
   overflow: hidden;
+  flex-grow: 1;
 }
 
 .reg-menu__long_opened {
