--- a/style/reg-menu.css
+++ b/style/reg-menu.css
@@ -74,7 +74,7 @@
 }
 
 .reg-menu__short {
-  background-image: url('../images/menu-reg-bg20.svg');
+  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/menu-reg-bg20.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -129,22 +129,6 @@
   border-radius: 10px;
 }
 
-.reg-menu__short-item_active {
-  /* color: #fff;
-  background-color: var(--color-secondary); */
-}
-
-/* .reg-menu__short-item_active::before {
-  content: '';
-  position: absolute;
-  top: 0%;
-  left: 20%;
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  background-color: var(--color-secondary);
-} */
-
 .reg-menu__short-item-accent {
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -187,7 +171,6 @@
   object-fit: contain;
   -o-object-position: center;
   object-position: center;
-  /* filter: brightness(0) invert(1); */
 }
 
 .reg-menu__short-item_active svg {
@@ -312,7 +295,7 @@
   grid-area: setting;
   width: 20px;
   height: 20px;
-  background-image: url('../images/icons/settings.png');
+  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/icons/settings.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
