--- a/style/typography.v3.css
+++ b/style/typography.v3.css
@@ -57,7 +57,7 @@
   line-height: 120%;
 }
 
-.menu {
+.menu-text {
   font-size: 10px;
   font-style: normal;
   font-weight: 300;
@@ -93,14 +93,14 @@
   .text1-bold {
     font-size: 12px;
   }
-  .menu {
+  .menu-text {
     font-size: 11px;
     font-weight: 400;
   }
 }
 
 @media screen and (max-width: 365px) {
-  .menu {
+  .menu-text {
     font-size: 9px;
   }
 }
