--- a/style/reg-menu.v2.css
+++ b/style/reg-menu.v2.css
@@ -343,6 +343,7 @@
 
 .menu_is-mobile {
   width: 100%;
+  display: none !important;
 }
 
 .mobile-header {
@@ -361,9 +362,15 @@
   border: 1px solid var(--color-primary);
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 35%;
+  max-width: 32%;
 }
 
-.mobile-header__logo {
-  flex-shrink: 0;
+@media screen and (max-width: 700px) {
+  .menu_is-desktop {
+    display: none;
+  }
+
+  .menu_is-mobile {
+    display: flex !important;
+  }
 }
