--- a/style/culcwithadv.css
+++ b/style/culcwithadv.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  margin-top: 20px;
 }
 
 .culcwithadv__item {
@@ -78,8 +79,13 @@
 }
 
 @media screen and (max-width: 500px) {
+  .culcwithadv {
+    margin: var(--space-primary) 0;
+  }
+
   .culcwithadv__adv {
     gap: 20px;
+    margin: 0 30px;
   }
   .culcwithadv__item {
     padding: 40px 10px;
