--- a/styles/index.v10.css
+++ b/styles/index.v10.css
@@ -39,3 +39,8 @@
 @import url('../blocks/intro/intro.v2.css');
 
 @import url('../blocks/registration/registration.v4.css');
+
+@import url('../style/servculc.css');
+
+@import url('../style/culcwithadv.css');
+
