--- a/blocks/optimization/optimization.css
+++ b/blocks/optimization/optimization.css
@@ -89,7 +89,7 @@
   z-index: -1;
 }
 .optimization__label-container {
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-star.svg');
+  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/bg-star.v1.svg');
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
