--- a/styles/social.css
+++ b/styles/social.css
@@ -45,3 +45,7 @@
 @import url('../blocks/social-intro/social-intro.v8.css');
 
 @import url('../blocks/service-list/service-list.css');
+
+@import url('../style/servculc.css');
+
+@import url('../style/culcwithadv.css');
