--- a/style/service-grid.css
+++ b/style/service-grid.css
@@ -72,10 +72,6 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.service-grid__link:hover {
-  border: 1px solid var(--color-primary);
-}
-
 .service-grid__item-title {
   font-size: 22px;
   font-weight: 500;
@@ -105,6 +101,13 @@
   border-radius: 40px;
   display: inline-block;
 }
+
+@media screen and (min-width: 1161px) {
+  .service-grid__link:hover {
+    border: 1px solid var(--color-primary);
+  }
+}
+
 
 @media screen and (max-width: 1161px) {
   .service-grid {
