--- a/style/service-grid.css
+++ b/style/service-grid.css
@@ -144,6 +144,7 @@
     min-height: 161px;
     border-radius: 10px;
     padding: 10px;
+    box-shadow: 0 4px 10px 0 #B2B9DC4D;
   }
 
   .service-grid__icon-container {
