--- a/style/common.v2.css
+++ b/style/common.v2.css
@@ -1,8 +1,15 @@
+a {
+  text-decoration: none;
+}
+
+a,
+button {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 button {
   padding: 0;
   border: 0;
   cursor: pointer;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .btn-rounded {
@@ -68,6 +75,24 @@ button {
   padding: 0;
 }
 
+.title-2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 120%;
+  margin: 0;
+  padding: 0;
+}
+
+.text-1 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 110%;
+  margin: 0;
+  padding: 0;
+}
+
 @media screen and (max-width: 600px) {
   .btn-rounded {
     width: 30px;
@@ -75,5 +100,13 @@ button {
   }
   .btn-rounded:hover {
     opacity: 1;
+  }
+
+  .title-2 {
+    font-size: 26px;
+  }
+
+  .text-1 {
+    font-size: 16px;
   }
 }
