--- a/blocks/btn/_color/btn_color_light-orange.v1.css
+++ b/blocks/btn/_color/btn_color_light-orange.v1.css
@@ -1,11 +1,10 @@
 .btn_color_light-orange {
   background-color: #fff;
-  border: 1px solid var(--color-secondary);
+  border: none;
   color: var(--color-secondary);
 }
 
 .btn_color_light-orange:hover,
 .btn_color_light-orange:focus {
   color: var(--color-secondary-hover);
-  border: 1px solid var(--color-secondary-hover);
 }
