--- a/style/common.v2.css
+++ b/style/common.v2.css
@@ -12,6 +12,16 @@ button {
   cursor: pointer;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .btn-rounded {
   width: 25px;
   height: 25px;
