--- a/blocks/root/root.v2.css
+++ b/blocks/root/root.v2.css
@@ -8,6 +8,7 @@
   --bg-color-secondary: #f8f9fd;
   --color-dark: rgba(26, 20, 45, 0.9);
   --color-semi-dark: rgba(26, 20, 45, 0.6);
+  --color-light-grey: rgba(117, 114, 126, 0.6);
   --font: Montserrat, Arial, sans-serif;
   --width-max: 1160px;
   --space-primary: 60px;
