--- a/style/common.v2.css
+++ b/style/common.v2.css
@@ -6,10 +6,17 @@ a,
 button {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
 button {
   padding: 0;
   border: 0;
   cursor: pointer;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .visually-hidden {
