--- a/blocks/social-intro/social-intro.v8.css
+++ b/blocks/social-intro/social-intro.v8.css
@@ -14,7 +14,7 @@
 }
 
 .social-intro__wrapper {
-  position: relative;
+  position: static;
   max-width: 1440px;
   width: 100%;
   margin: 0 auto;
@@ -33,7 +33,7 @@
 .social-intro__wrapper_type_social::before {
   width: 315px;
   height: 315px;
-  top: -5%;
+  top: -10%;
   right: 3%;
   transform: rotate(10deg) translate(15%, -15%);
 }
@@ -290,7 +290,7 @@
 
 @media screen and (max-width: 800px) {
   .social-intro {
-    padding: 40px 5px 0 30px;
+    padding: 40px 30px 0 30px;
     margin-bottom: 50px;
   }
   .social-intro__content {
@@ -304,13 +304,13 @@
   .social-intro__wrapper::before {
     width: 110px;
     height: 110px;
-    top: -5%;
+    top: -2%;
   }
   .social-intro__wrapper::after {
     width: 41px;
     height: 41px;
-    top: 25%;
-    right: 5%;
+    top: 17%;
+    right: 3%;
     transform: rotate(-15deg) translate(15%, -15%);
   }
   .social-intro__container-text {
@@ -342,7 +342,7 @@
   .social-intro__title {
     margin: 0 0 20px;
     font-size: 32px;
-    padding-right: 30px;
+    padding-right: 0px;
   }
   .social-intro__icon {
     width: 30px;
@@ -387,8 +387,8 @@
   }
 
   .social-intro__social-grid-item {
-    width: 32px;
-    height: 32px;
+    width: 28px;
+    height: 28px;
     justify-content: space-between;
   }
 }
