--- a/blocks/footer/footer.v2.css
+++ b/blocks/footer/footer.v2.css
@@ -152,7 +152,7 @@
   display: inline-block;
   width: 12px;
   height: 10px;
-  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/arrow.svg');
+  background-image: url('https://cdn.rawgit.com/bread2077/temp/main/images/arrow.v1.svg');
   background-repeat: no-repeat;
   background-size: contain;
   margin-left: 8px;
