--- a/blocks/intro/intro.v2.css
+++ b/blocks/intro/intro.v2.css
@@ -140,12 +140,43 @@
   margin: 0px 0 0 25px;
 }
 
+.intro__social-grid {
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  max-width: 90%;
+  margin-bottom: 30px;
+  background: #e0e4f8;
+  border-radius: 10px;
+  padding: 8px 12px;
+}
+
+.intro__social-grid-item {
+  width: 30px;
+  height: 30px;
+}
+
+.intro__social-grid-item a {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.intro__social-grid-item img {
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: 1160px) {
   .intro {
     padding: 140px 0 230px;
   }
   .intro__section_type_primary {
     padding: 0 30px;
+  }
+}
+
+@media screen and (min-width: 1160px) {
+  .intro__social-grid-item a:hover {
+    opacity: 0.6;
   }
 }
 
@@ -208,6 +239,19 @@
     max-width: 100%;
     margin: 0px 30px 25px;
     text-align: center;
+  }
+
+  .intro__social-grid {
+    justify-content: space-between;
+    gap: 7px;
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .intro__social-grid-item {
+    width: 28px;
+    height: 28px;
+    justify-content: space-between;
   }
 }
 
