--- a/styles/index.v10.css
+++ b/styles/index.v10.css
@@ -44,8 +44,8 @@
 
 @import url('../style/culcwithadv.css');
 
+@import url('../style/service-grid.css');
+
 @import url('../style/download-app.css');
 
 @import url('../style/tg-bot.css');
-
-
