--- a/blocks/registration/registration.v4.css
+++ b/blocks/registration/registration.v4.css
@@ -2,6 +2,10 @@
   max-width: var(--width-max);
   padding: calc(var(--space-primary) + 40px) 0 var(--space-primary);
   margin: 0 auto !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .registration__title {
   color: var(--color-dark);
@@ -11,10 +15,15 @@
 .registration__form {
   display: grid;
   grid-template-areas:
-    '. error .'
-    'login password button'
-    'registration forget remember'
-    'capcha . .';
+    'error error'
+    'login password'
+    'forget remember'
+    'capcha capcha'
+    'button button'
+    'registration registration'
+    'google google';
+  max-width: 780px;
+  width: 100%;
   gap: 20px 40px;
 }
 .registration__input {
@@ -56,6 +65,7 @@
 }
 .registration__text_grid_registration {
   grid-area: registration;
+  text-align: center;
 }
 .registration__link {
   color: var(--color-primary);
@@ -75,7 +85,55 @@
   font-weight: 600;
   font-size: 20px;
   line-height: 21px;
+  padding: 10px 0;
 }
+
+.registration__google-signin {
+  justify-self: center;
+}
+
+.registration__google-signin-capture {
+  text-align: center;
+  margin-bottom: 20px !important;
+  position: relative;
+  width: 100%;
+  opacity: 0.7;
+}
+
+.registration__google-signin-capture::after,
+.registration__google-signin-capture::before {
+  content: '';
+  position: absolute;
+  height: 1px;
+  width: 50%;
+  background-color: #222;
+  opacity: 0.2;
+  top: 50%;
+}
+
+.registration__google-signin-capture::after {
+  left: 55%;
+}
+
+.registration__google-signin-capture::before {
+  right: 55%;
+}
+
+.registration__google-signin-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60%;
+  justify-self: center;
+  grid-area: google;
+}
+
+.registration__google-signup {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
 @media screen and (max-width: 1160px) {
   .registration {
     margin: calc(var(--space-primary) + 40px) 30px var(--space-primary);
@@ -98,14 +156,13 @@
       'remember forget'
       'capcha capcha'
       'button button'
-      'registration registration';
+      'registration registration'
+      'google google';
     gap: 20px;
     max-width: 400px;
     margin: 0 auto;
   }
-  .registration__text_grid_registration {
-    text-align: center;
-  }
+
   .registration__link_grid_forget {
     justify-self: end;
   }
@@ -116,5 +173,31 @@
     font-size: 16px;
     padding: 12px 0;
     margin: 20px 0 0;
+  }
+
+  .registration__google-signin-capture {
+    margin-bottom: 0px;
+  }
+
+  .registration__google-signin-capture::after {
+    left: 60%;
+  }
+
+  .registration__google-signin-capture::before {
+    right: 60%;
+  }
+
+  .registration__google-signin {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 781px) {
+  .registration__form {
+    border-radius: 20px;
+    padding: 20px 30px 40px;
+    box-shadow: 0 4px 20px 0 #b2b9dc6e;
   }
 }
